--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="kiwiconfig" content="../kiwiconfig.json">
     <link rel="icon" type="image/png" href="static/favicon.png">
-    <title>Kiwi IRC</title>
+    <title>lou.network</title>
     <style>
     /* target specific styles */
     body {
