--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="kiwiconfig" content="../kiwiconfig.json">
     <link rel="icon" type="image/png" href="static/favicon.png">
     <title>Kiwi IRC</title>
     <style>
